src/main/kotlin/com/example/yourssu/error/ArticleNotFoundException.kt
package com.example.yourssu.error

import com.example.yourssu.error.NotFoundException

class ArticleNotFoundException(override val message: String = "Article Not Found") : NotFoundException(message)